# rag-sql-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  api.py  config.py  context.py  execute.py  generate.py  interpret.py  llm.py  logging_store.py  pipeline.py  validate.py
clickhouse/: users.xml
clickhouse/init/: 01_schema.sql  02_seed.sql
eval/: cases.yaml  run_eval.py
knowledge/: examples.md  metrics.md
knowledge/tables/: events.md  sessions.md  users.md
ui/: streamlit_app.py
